--- a/middle_hibernate/job4j_todo/src/main/webapp/index.html
+++ b/middle_hibernate/job4j_todo/src/main/webapp/index.html
@@ -8,114 +8,7 @@
         integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
-    <script>
-    function validate() {
-        if($('#description').val() == '') {
-            alert($('#description').attr('title'));
-            return false
-        }
-        return true
-    }
-    </script>
-    <script>
-        function getCheck(check) {
-            if(check == true) {
-                return 'checked'
-            }
-            return ''
-        }
-    </script>
-    <script>
-        let all = false
-
-        function chengeAll() {
-            all = allItems.checked
-            console.log(all)
-            load()
-        }
-
-        function load() {
-        $.ajax({
-            type: 'GET',
-            url: 'http://localhost:8080/todo/index?all=' + all,
-            dataType: 'json'
-        }).done(function (data) {
-            console.log(data)
-            let html = '<tbody id="dataTable">'
-            for(let item of data)
-            {
-                html += '<tr>'
-                    html += '<td>'
-                    html += '<input type="checkbox" id=' + item.id + ' ' + getCheck(item.done) +' onclick="update('+ item.id + ', checked)">'
-                    html += '</td>' 
-                    html += '<td>'
-                    html += item.createdTime
-                    html += '</td>'
-                    html += '<td>'
-                    html += item.description
-                    html += '</td>' 
-                html += '</tr>'   
-            }
-            html += '</tbody>'
-            $('#dataTable').replaceWith(html)
-            console.log('#dataTable')
-        }).fail(function (err) {
-            console.log(err)
-        })
-        }
-    </script>
-    <script>
-        $(document).ready(function () {
-            load();
-        });
-    </script>
-    <script>
-        function addItem() {
-    $.ajax({
-        type: 'PUT',
-        url: 'http://localhost:8080/todo/index',
-        data: JSON.stringify({
-            id: 0,
-            description: $('#description').val(),
-            createdTime: null,
-            done: false
-        })
-    }).done(
-        load()
-    ).fail(function (err) {
-        console.log(err);
-    });
-}
-    </script>
-    <script>
-        function send() {
-            console.log('SEND')
-            if(validate()) {
-                console.log('SEND - true')
-                addItem()
-            }
-        }
-    </script>
-    <script>
-        function update(i, c) {
-            console.log(i)
-            console.log(c)
-            $.ajax({
-            type: 'POST',
-            url: 'http://localhost:8080/todo/index',
-            data: JSON.stringify({
-            id: i,
-            description: null,
-            createdTime: null,
-            done: c
-        })
-    }).done(
-        load()
-    ).fail(function (err) {
-        console.log(err);
-    });
-        }
-    </script>
+    <script src="resources/core.js"></script>
 </head>
 <body>
     <div class="container pt-3">
