--- a/middle_hibernate/job4j_todo/src/main/webapp/index.html
+++ b/middle_hibernate/job4j_todo/src/main/webapp/index.html
@@ -4,6 +4,7 @@
     <title>ToDo List</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="resources/core.css">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
         integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
@@ -14,9 +15,9 @@
     <div class="container pt-3">
         <div class="row">
             <div class="card-body">
-                <form action="/todo/user" method="POST">
-                    <h4 id="logging">Имя </h4> 
-                    <button type="submit" class="btn">Выйти</button>
+                <form action="/todo/user" method="POST" class="Mytitle">
+                    <b id="logging">Имя </b> 
+                    <button type="submit" class="btn btn-secondary" >Выйти</button>
                 </form>
             </div>
             
@@ -25,12 +26,18 @@
                     Добавить новое задание
                 </div>
                 <div class="card-body">
-                    <form>
+                    <form action="/todo/addItem" method="POST">
                         <div class="form-group">
                             <label>Новое задание</label>
-                            <input type="text" class="form-control" name="description" title="Enter description" id="description" placeholder="Enter description">
+                            <input type="text" class="form-control" name="description" title="Enter description" id="description" placeholder="Enter description" required>
                         </div>
-                        <button type="submit" class="btn btn-primary" onclick="send()">Добавить</button>
+                        <label>Список категорий</label>
+                        <div class="form-group">
+                            <select class="form-control" name="categ" id="categ" multiple>
+                                    <option>Загрузка данных...</option>
+                            </select>
+                        </div>
+                        <button type="submit" class="btn btn-primary" onclick="return validate()">Добавить</button>
                     </form>
                 </div>
             </div>
@@ -47,12 +54,13 @@
                         <tr>
                             <th scope="col">Выполнено</th>
                             <th scope="col">Дата создания</th>
+                            <th scope="col">Категории</th>
                             <th scope="col">Описание</th>
                             <th scope="col">Автор</th>
                         </tr>
                         </thead>
                         <tbody id='dataTable'>
-
+                            <tr><td>Загрузка данных...</td></tr>
                         </tbody>
                     </table>
                 </div>
